--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   "author": "Rajshree",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cloudinary": "^2.6.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.15.0"
+    "express-fileupload": "^1.5.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.0",
+    "zod": "^3.25.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
